--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,10 @@ workflows:
   run-script-workflow:
     jobs:
       - run-script
+    triggers:
+      - schedule:
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - main
